# Biosim

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  learnings.md  package.json
app/: Cargo.toml  build.rs
app/src/: biosim_plugin.rs  compute_shader.rs  main.rs  world.rs
assets/shaders/: world.wgsl
biosim-core/: Cargo.toml
biosim-core/src/: hex_grid.rs  lib.rs  util.rs  world.rs
biosim_rust/: readme.md  todo-note
biosim_rust/src/: biosim_plugin.rs  main.rs
rust_gpu/: Cargo.toml
shader/: Cargo.toml
shader/src/: lib.rs
src/: App.scss  App.tsx  PanZoomControls.ts  Scene.tsx  biosim_plugin.rs  hex_grid.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: biosim_plugin.rs  hex_grid.rs  main.rs  world.rs
