[package]
name = "biosim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
arr_macro = "0.2.1"
serde-big-array = "0.5.1"
bevy = { version = "0.13.2", features = ["shader_format_spirv"]}
bevy_pancam = "0.11.1"
biosim-core = { path = "../biosim-core"}
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
ndarray = "0.16.0"
wgpu = "0.19.4"

[build-dependencies]
spirv-builder = { version = "0.9" }

[features]
cpu = []
rect_grid = []
