[package]
name = "biosim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bevy = { version = "0.13.2", features = ["shader_format_spirv"]}
bevy_pancam = "0.11.1"
biosim-core = { path = "../biosim-core"}
ndarray = "0.16.0"
wgpu = "0.19.4"
bytemuck = "1.23.2"

[build-dependencies]
spirv-builder = { version = "0.9" }

[features]
cpu = []
rect_grid = []
